--- a/Android.css
+++ b/Android.css
@@ -64,9 +64,11 @@ nav {
   background-color: var(--cor5);
   padding: 10px;
   box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.178);
+  display: flex;
+  justify-content: space-between;
 }
 
-nav>a {
+nav > .nav-links a {
   color: var(--cor1);
   padding: 10px;
   text-decoration: none;
@@ -75,10 +77,16 @@ nav>a {
   transition-duration: .5s;
 }
 
-nav>a:hover {
+nav> .nav-links a:hover {
   background-color: var(--cor3);
   color: var(--cor5);
 }
+
+.pesquisa{
+  object-position: right;
+}
+ 
+
 
 main {
   background-color: white;
@@ -95,7 +103,7 @@ main {
 main h1 {
   color: var(--cor5);
   font-family: var(--fonte-android);
-  font-weight: normal;
+  font-weight: normal; 
   font-size: 1.7em;
 }
 
